tests/semantic/pass/ptr2fun_ret_ptr2int.c
int *(*pfp)(void);        //a pointer to a function returning an int pointer

int main(void) {
  int* intptr;
  intptr = (*pfp)();
  return *intptr;
}
