tests/semantic/fail/illegal_types2.c
int (*pff)()();         // a pointer to a function returning a function returning an int (ILLEGAL)
